--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>lifan test</title>
+    <title>lifan test---dev branch test</title>
     <style type="text/css" media="screen">
       body {
         margin: 0;
